# transfer_file_over_socket

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
scripts/: format.ps1  format.sh  lint.ps1  update_third_libs.sh
src/: constant.h  file_getter.h  main.cpp  tcp_server.h
test/: test_file_getter.cpp
third/: CMakeLists.txt
